# SoftRenderer

./: CMake-VS-15-2017.bat  CMake-VS-16-2019.bat  CMakeLists.txt  README.md
Resource/: Red.tga
Source/Player/: CMakeLists.txt  InputManager.h  Precompiled.h  SoftRenderer.cpp  SoftRenderer.h  SoftRendererImpl2D.cpp  SoftRendererImpl2D.h
Source/Player/WindowsPrivate/: WindowsApp.cpp  WindowsPlayer.h  WindowsUtil.h
Source/Runtime/Engine/: CMakeLists.txt
Source/Runtime/Engine/Private/: BaseComponent.cpp  CameraComponent.cpp  Entity.cpp  GameEngine.cpp  LightComponent.cpp  ModelAsset.cpp  ModelRenderComponent.cpp  MovementComponent.cpp  Scene.cpp  TextureAsset.cpp
Source/Runtime/Engine/Public/: Asset.h  BaseComponent.h  CameraComponent.h  EngineUtility.h  Entity.h  GameEngine.h  InputManagerProxy.h  LightComponent.h  ModelAsset.h  ModelRenderComponent.h  MovementComponent.h  Scene.h  TextureAsset.h
Source/Runtime/Math/: CMakeLists.txt
Source/Runtime/Math/Private/: LinearColor.cpp  Math.cpp  Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Source/Runtime/Math/Public/: Color32.h  CoreDefinition.h  LinearColor.h  MathHeaders.h  MathUtil.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  ScreenPoint.h  Vector2.h  Vector3.h  Vector4.h
Source/Runtime/Renderer/: CMakeLists.txt
Source/Runtime/Renderer/Private/: FragmentShader.cpp  InputAssembler.cpp  Rasterizer.cpp  RenderContext.cpp  RenderFactory.cpp  VertexShader.cpp
Source/Runtime/Renderer/Public/: FragmentShader.h  InputAssembler.h  OutputMerger.h  RSIDataTypes.h  Rasterizer.h  RenderContext.h  RenderFactory.h  RenderingSoftwareInterface.h  VertexShader.h
Source/Runtime/Renderer/WindowsPrivate/: WindowsGDI.cpp  WindowsRSI.cpp
Source/Runtime/Renderer/WindowsPublic/: WindowsGDI.h  WindowsRSI.h
